--- a/index.Rmd
+++ b/index.Rmd
@@ -1,5 +1,5 @@
 ---
-output: 
+output:
   revealjs::revealjs_presentation:
     transition: none
     theme: white
@@ -23,8 +23,8 @@ Sau-Chin Chen </br>
 <small>Tzu-Chi University</small>
 
 <img src="https://osf.io/static/img/circle_logo.png"  height="20" width="20"> <small>Center for Open Science, Ambassador</small></br>
-<img src="https://psysciacc.files.wordpress.com/2017/10/cropped-cropped-psa.png"  height="20" width="20"> 
-<small>Psychological SCience Accelerators, Fellow, Assistant Director</small></br>
+<img src="https://psysciacc.files.wordpress.com/2017/10/cropped-cropped-psa.png"  height="20" width="20">
+<small>Psychological Science Accelerator, Fellow, Assistant Director</small></br>
 <img src="https://upload.wikimedia.org/wikipedia/commons/b/bc/Website11.png"  height="20" width="20"> [<small>scchen.com</small>](http://scchen.com)
 
 <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="創用 CC 授權條款" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a>  <small>[Fork my slides on Github](https://github.com/SCgeeker/)</small>
@@ -84,13 +84,13 @@ Sau-Chin Chen </br>
 
 ----
 
-### About picture veification
+### About picture verification
 
 ![](D:/core/Research/projects/Embodied/EXPDATA/ActionObject/2016_Simulation/report/Stage2_manuscript_files/figure-latex/study1-meta-1.png)
 
 ----
 
-### About picture identification 
+### About picture identification
 
 ![](D:/core/Research/OpenSci/Public/PSA_Orientation/includes/img/PP.png)
 
@@ -111,12 +111,12 @@ No language group shows match advantage in picture naming.
 
 ## Issue
 
->- **Language Diversity**: Amenrican English shows the robust orientation effect
+>- **Language Diversity**: American English shows the robust orientation effect
 >- **Embodied Cognition**: Extended studies depended on small effect size
 
 ----
 
->- How would langauge alter match advantage of object orientation?
+>- How would language alter match advantage of object orientation?
 
 ![](https://upload.wikimedia.org/wikipedia/commons/thumb/4/4f/Black_hole_-_Messier_87_crop_max_res.jpg/480px-Black_hole_-_Messier_87_crop_max_res.jpg)
 
