--- a/index.Rmd
+++ b/index.Rmd
@@ -19,7 +19,7 @@ bibliography: "D:/core/Research/projects/Embodied/EXPDATA/ActionObject/2016_Simu
 ## About me
 
 Sau-Chin Chen </br>
-<small>Associative Professor, Department of Human Development and Psychology</small> </br>
+<small>associate professor, Department of Human Development and Psychology</small> </br>
 <small>Tzu-Chi University</small>
 
 <img src="https://osf.io/static/img/circle_logo.png"  height="20" width="20"> <small>Center for Open Science, Ambassador</small></br>
@@ -30,16 +30,12 @@ Sau-Chin Chen </br>
 <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a>
 <small>[Fork my slides on Github](https://github.com/SCgeeker/)</small>
 
-# Orientation and Size
+# Orientation and Size: Beginning of our Journey
 
-## Issues
-
->- **Mental Simulation**: Our minds simulate what we are reading.
->- **Match Advantage**: (Check example)Faster responses to the object pictures which are compatible with our simulations.
 
 ----
 
-|Properties|Example|$Chone's\ d_z$|
+|<samll>Properties</small>|<small>Example</small>|$Chone's\ d_z$|
 |:---:|:---:|---|
 |<samll>Shape</small>|![](./includes/img/shape.png)|.27 ~ .31|
 |<small>Color</small>|![](./includes/img/color.png)|.20 ~ .48|
@@ -47,6 +43,19 @@ Sau-Chin Chen </br>
 |<small>Orientation</small>|![](./includes/img/orientation.png)|.07 ~ .13|
 
 <small> Source: @ZwaanRevisitingMentalSimulation2012; @koning_mental_2017; @dekoningSizeDoesMatter2017 </small>
+
+----
+
+### Why test orientation effects across languages
+
+>- Inconsistent findings among languages
+>- Mysterious implication: Language Comprehension X Actions
+>- Update researchers' scope
+
+## Issues
+
+>- **Mental Simulation**: Our minds simulate what we are reading.
+>- **Match Advantage**: (Check example)Faster responses to the object pictures which are compatible with our simulations.
 
 ----
 
@@ -111,9 +120,20 @@ Sau-Chin Chen </br>
 
 # Orientation effects across languages
 
+----
+
+### Why PSA accept this project
+
+>- Timing
+>- Significance </br>
+   Members share the interest with mine </br>
+   Accumulated evidence would provoke new research topic
+>- Feasibility </br>
+  Members could run this project with the limited resource  </br>
+  Members could afford the estimated sample size 
+
 ## Issue
 
-<<<<<<< HEAD
 >- **Language Diversity**: Finding robust orientation effect in addition to Amenrican English?
 >- **Embodied Cognition**: Studies tested extended hypothesis in terms of small effect size
 
