--- a/index.Rmd
+++ b/index.Rmd
@@ -53,7 +53,7 @@ knitr::include_graphics(path = "./includes/img/Lakens_to_EverythingHertz.png")
 
 ## Projects
 
-|[![OBJECT ORIENTATION](./includes/img/orientation.png)](003_project.html)||
+|[![OBJECT ORIENTATION](./includes/img/orientation.png)](003_project.html)|![TRUE BELIEF](./includes/img/004.jpg)|
 |:---:|:---:|
 ||[![TROLLEY PROBLEM](./includes/img/006.jpg)](https://osf.io/ypqhb/)|
 
