--- a/003_project.Rmd
+++ b/003_project.Rmd
@@ -19,7 +19,7 @@ bibliography: "D:/core/Research/projects/Embodied/EXPDATA/ActionObject/2016_Simu
 ## About me
 
 Sau-Chin Chen </br>
-<small>associate professor, Department of Human Development and Psychology</small> </br>
+<small>Associate professor, Department of Human Development and Psychology</small> </br>
 <small>Tzu-Chi University</small>
 
 <img src="https://osf.io/static/img/circle_logo.png"  height="20" width="20"> <small>Center for Open Science, Ambassador</small></br>
@@ -32,6 +32,10 @@ Sau-Chin Chen </br>
 
 # Orientation and Size: Beginning of our Journey
 
+## Issues
+
+>- **Mental Simulation**: Our minds simulate what we are reading.
+>- **Match Advantage**: Faster responses to the object pictures which are compatible with our simulations.
 
 ----
 
@@ -51,11 +55,6 @@ Sau-Chin Chen </br>
 >- Inconsistent findings among languages
 >- Mysterious implication: Language Comprehension X Actions
 >- Update researchers' scope
-
-## Issues
-
->- **Mental Simulation**: Our minds simulate what we are reading.
->- **Match Advantage**: Faster responses to the object pictures which are compatible with our simulations.
 
 ----
 
@@ -134,8 +133,8 @@ Sau-Chin Chen </br>
 
 ## Confirmation and Exploration
 
->- **Language Diversity**: American English shows the robust orientation effect
->- **Embodied Cognition**: Extended studies depended on small effect size
+>- **Language Diversity**: American English shows a robust orientation effect
+>- **Embodied Cognition**: Extended studies showed small effect size
 
 ----
 
@@ -195,22 +194,56 @@ Sau-Chin Chen </br>
 >- Investigate **psychological effects** which could be diverse among cultures, langauges, societies, and any human traits.
 - Accumulate the reproducible data in science literature.
 
-## Challenges (for local site)
+----
 
->- Limited resource
+## Challenges (for local sites/psych labs in various locations)
+
+- Limited resources ~ lack of financial/psychological supports from the affiliation/government.
 - Incompatible with current research interest
-- Awareness to update members' practices
-- Motivation toward open sciences
+- A need to keep members' skills up to date
+
+## Challenges (for local sites/psych labs in various locations)
+
+- Motivation to promote open science
+- Access to non-student samples
+- Data management compatible with collaborative protocol
+
+----
 
 ## Opportunities (for local site)
 
->- Explore new research topics
+- Explore new research topics
 - Share experience
 - Upgrade scientific scope
 
+----
+
+## Opportunities (for local site)
+
+- Be a part of big replication/innovative projects
+- Learning new tools
+- Co-authoring papers (publications in prestigious journals)
+
+----
+
+## Opportunities (for local site)
+
+- Be a part of testing psychological projects on non-WEIRD populations and thus engaging in improving the field
+- New collaboration opportunities
+- Meeting scientists with similar interests from all over the world
+
+----
+
+## Opportunities (for local site)
+
+- Contributing to huge datasets for future meta-science studies
+- Using PSA's excellent translation resources
+
+----
+
 ## Thoughts and Recommendations
 
->- Do what you like
+- Do what you like
 - Improve your standard of research quality
 - Think about the global potential of your local study
 
