--- a/index.Rmd
+++ b/index.Rmd
@@ -57,7 +57,7 @@ knitr::include_graphics(path = "./includes/img/Lakens_to_EverythingHertz.png")
 
 |[![OBJECT ORIENTATION](./includes/img/orientation.png)](003_project.html)|[![TRUE BELIEF](./includes/img/004.jpg)](https://osf.io/8ru9e/)|
 |:---:|:---:|
-||[![TROLLEY PROBLEM](./includes/img/006.jpg)](https://osf.io/ypqhb/)|
+|[![STEREO THREAT](./includes/img/005.png)](https://osf.io/u6af8/)|[![TROLLEY PROBLEM](./includes/img/006.jpg)](https://osf.io/ypqhb/)|
 
 <!---
 - ()
